Correct some spacing and mobile issues

--- a/packages/lazarus-shared/theme.scss
+++ b/packages/lazarus-shared/theme.scss
@@ -813,14 +813,6 @@ body {
     min-width: auto;
     max-width: 100%;
   }
-
-  &[data-embed-align="left"] {
-    margin-right: 0;
-  }
-
-  &[data-embed-align="right"] {
-    margin-left: 0;
-  }
 }
 
 .program {
